2022-01-11  Martin Storsjö  <martin@martin.st>

	* dlltool.c (main): If a prefix has not been provided, attempt to
	use a deterministic one based upon the dll name.

2022-01-07  Pavel Mayorov  <pmayorov@cloudlinux.com>

	PR 28718
	* dwarf.c: Revert previous delta.
	(debug_get_real_type): Reject indirect types that point to
	indirect types.
	(debug_get_type_name, debug_get_type_size, debug_write_type):
	Likewise.

2022-01-06  Nick Clifton  <nickc@redhat.com>

	* debug.c (debug_write_type): Allow for malicious recursion via
	indirect debug types.

2022-01-04  Nick Clifton  <nickc@redhat.com>

	PR 28716
	* dwarf.c (load_build_id_debug_file): Remove spurious printf.

2021-12-16  Nick Clifton  <nickc@redhat.com>

	PR 28697
	* dwarf.c (load_build_id_debug_file): New function.
	(try_build_id_prefix): New function.
	(check_for_and_load_links): Call load_build_id_debug_file.
	(debug_displays): Add entry for .note.gnu.build-id.
	* dwarf.h (enum dwarf_section_display_enum): Add
	note_gnu_build_id.
	* testsuite/binutils-all/debuginfod.exp (test_fetch_debuglink):
	Fix regexp for loads via debuglink section.

2021-12-03  Chenghua Xu  <xuchenghua@loongson.cn>

	* MAINTAINERS: Add myself and Zhensong Liu
	as the LoongArch maintainer.

2021-12-02  Nick Clifton  <nickc@redhat.com>

	PR 28645
	* dwarf.c (process_cu_tu_index): Add test for overruning section
	whilst processing slots.

2021-11-30  Roland McGrath  <mcgrathr@google.com>

	* doc/local.mk: Give each man page target its missing dependency on
	doc/$(am__dirstamp).

2021-11-30  Nick Clifton  <nickc@redhat.com>

	* dwarf.c (find_debug_info_for_offset): Use dwarf_vma type for
	offsets, sizes and ranges.
	(display_loc_list): Likewise.  Also use print_dwarf_vma to print
	the offset.
	(display_loclists_list): Likewise.
	(display_loc_list_dwo): Likewise.
	(display_debug_str): Likewise.
	(display_debug_aranges): Likewise.
	(display_debug_ranges_list): Likewise.
	(display_debug_rnglists_list): Likewise.